# velox-cli

./: Cargo.toml  README.md  velox-config.toml
.github/workflows/: rust.yml
scripts/: create_msi.py
src/: cli.yml  config.rs  lib.rs  main.rs  server.rs  setup.rs  subprocess.rs  template.rs  utils.rs
template/: velox.conf.json
template/src/: main.rs
template/web/: index.html
velox-template/: Cargo.toml  velox-config.json  velox-config.toml
velox-template/src/: main.rs
velox-template/web/: bundler.config.js  index.html  package.json
velox-template/web/src/: index.js
