[package]
name = "velox"
version = "0.1.0"
authors = ["dev-sinpy <tdevyanshu9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
velox_bundler = {path = "../velox-bundler"}
clap = {version = "2.33.3", features = ["yaml"]}
include_dir = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
custom_error = "1.8.0"
dialoguer = "0.7.1"